apps/taiga/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: taiga-tls
      hosts:
        - taiga.picturo.us
  rules:
    - host: taiga.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taiga-gateway
                port:
                  number: 9000
